# pptxlib

./: .gitignore  404.html  README.md  index.html  lcov.info  mkdocs.yaml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  ci.yml  docs.yaml  docs.yml  publish.yaml
api/pptxlib/: index.html
api/pptxlib/app/: index.html
api/pptxlib/base/: index.html
api/pptxlib/client/: index.html
api/pptxlib/color/: index.html
api/pptxlib/font/: index.html
api/pptxlib/gantt/: index.html
api/pptxlib/presentation/: index.html
api/pptxlib/shape/: index.html
api/pptxlib/slide/: index.html
api/pptxlib/table/: index.html
docs/: index.md
docs/api/: overview.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: automation.md  basics.md  essentials.md  faq.md  index.md  quick-tour.md  recipes.md  shapes.md  slides.md  styling.md  tables.md  troubleshooting.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
notebooks/: a.ipynb  example.ipynb
search/: search_index.json
src/pptxlib/: __init__.py  app.py  base.py  client.py  color.py  colors.py  compat.py  core.py  gantt.py  index.html  layout.py  lines.py  presentation.py  shape.py  shapes.py  slide.py  style.py  table.py  tables.py  utils.py
src/pptxlib/app/: index.html
src/pptxlib/base/: index.html
src/pptxlib/client/: index.html
src/pptxlib/color/: index.html
src/pptxlib/contrib/: __init__.py  gantt.py
src/pptxlib/core/: app.py  base.py  font.py  label.py  line.py  presentation.py  shape.py  slide.py  table.py  table_old.py
src/pptxlib/font/: index.html
src/pptxlib/gantt/: index.html
src/pptxlib/presentation/: index.html
src/pptxlib/shape/: index.html
src/pptxlib/slide/: index.html
src/pptxlib/table/: index.html
src/pptxlib/testing/: common.py
src/pptxlib/testing/core/: shape.py
tests/: conftest.py  gantt.py  picture.py  shape.py  table.py  test_app.py  test_client.py  test_color.py  test_connector.py  test_core.py  test_font.py  test_gantt.py  test_layout.py  test_line_fill.py  test_lines.py  test_presentation.py  test_shape.py  test_shapes.py  test_slide.py  test_table.py  test_tables.py  test_version.py
tests/contrib/: gannt.py  test_gantt.py  test_gantt_unit.py
tests/core/: main.py  table.py  test_app.py  test_b.py  test_client.py  test_color.py  test_connector.py  test_font.py  test_layout.py  test_line_fill.py  test_presentation.py  test_shape.py  test_slide.py  test_table.py
xlviews/: __init__.py  _multiindex.py  axes.py  box.py  config.py  decorators.py  dist.py  element.py  format.py  formula.py  frame.py  grid.py  shotmap.py  stats.py  style.py  utils.py  xlviews.ini
xlviews/powerpoint/: connector.py  gantt.py  layout.py  main.py  style.py  table.py
