[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pptxlib"
version = '0.1.1'
description = "PowerPoint lib"
readme = "README.md"
license = "MIT"
authors = [{ name = "daizutabi", email = "daizutabi@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = ["matplotlib", "pywin32"]

[project.urls]
Documentation = "https://daizutabi.github.io/pptxlib"
Source = "https://github.com/daizutabi/pptxlib"
Issues = "https://github.com/daizutabi/pptxlib/issues"

[tool.uv]
dev-dependencies = [
  "mkapi",
  "mkdocs-material",
  "mkdocs>=1.6",
  "pytest-clarity",
  "pytest-cov",
  "pytest-randomly",
  "ruff",
]

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/pptxlib"]

[tool.pytest.ini_options]
addopts = ["--cov-report=lcov:lcov.info", "--cov=pptxlib", "--doctest-modules"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
filterwarnings = ['ignore:setDaemon\(\) is deprecated:DeprecationWarning']

[tool.coverage.report]
exclude_lines = ["no cov", "raise NotImplementedError", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
unfixable = ["F401"]
ignore = [
  "ANN002",
  "ANN003",
  "ANN401",
  "ARG002",
  "B904",
  "D105",
  "D107",
  "D203",
  "D213",
  "EM101",
  "PGH003",
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "A001",
  "ANN",
  "ARG",
  "D",
  "FBT",
  "PD",
  "PLR",
  "PT",
  "S",
  "SIM117",
  "SLF",
]
